<resources>
    <string name="app_name">SakshMaa</string>

    <string name="crgrptxt1">Hello there \nWelcome back</string>
    <string name="crgrptext2">Create\nGroup</string>
    <string name="crgrptext3">login</string>
    <string name="addusertext1">Add Member</string>
    <string name="addusertext2">Username</string>
    <string name="addusertext3">Mobile number</string>
    <string name="addusertext4">Enter aadhar number</string>
    <string name="addusertext5">Set Password</string>
    <string name="admlogtext1">Hi</string>
    <string name="view">View Information</string>
    <string name="admlogtext2">Edit Information</string>
    <string name="admlogtext3">Total Amount of Bachat Gat :</string>
    <string name="admlogtext4">Your Investment In Bachat Gat :</string>
    <string name="admlogtext5">Remaining amount of Bachat Gat :</string>
    <string name="admlogtext6">Current Loan Amount Distributed :</string>
    <string name="admlogtext7">Add Members</string>
    <string name="admlogtext8">Collection Record</string>
    <string name="admlogtext9">Loan</string>
    <string name="admlogtext10">Remove \n Members</string>
    <string name="allrectext1">Your All records History</string>
    <string name="allrectext2">Date</string>
    <string name="allrectext3">Amount Deposited</string>
    <string name="allrectext4">Your Loan Record</string>
    <string name="allrectext5">Loan Amount</string>
    <string name="allrectext6">Interest = 2%</string>
    <string name="allrectext7">Fine</string>
    <string name="allrectext8">Due Date</string>
    <string name="colltext1">Collection</string>
    <string name="colltext2">select name</string>
    <string name="colltext3">amount collected</string>
    <string name="colltext4">fine</string>
    <string name="colltext5">SAVE</string>
    <string name="colltext6">Go to Records</string>
    <string name="grpinfotext1">Bachat Gat Information</string>
    <string name="grpinfotext2">Bachat Gat Name :</string>
    <string name="grpinfotext3">Bachat gat code :</string>
    <string name="grpinfotext4">Total members :</string>
    <string name="grpinfotext5">Start Month :</string>
    <string name="grpinfotext6">Admin Details:</string>
    <string name="grpinfotext7">Members</string>
    <string name="grpinfotext8">SR.</string>
    <string name="grpinfotext9">Name</string>
    <string name="grpinfotext10">Loan</string>
    <string name="grpregtxt1">Fill in to create group</string>
    <string name="grpregtxt2">Group name</string>
    <string name="grpregtxt3">Admin Name</string>
    <string name="grpregtxt4">Mobile Number</string>
    <string name="grpregtxt5">Start Year</string>
    <string name="grpregtxt6">Start Month</string>
    <string name="grpregtxt7">Monthly Saving</string>
    <string name="grpregtxt8">Create</string>
    <string name="loantxt1">LOAN</string>
    <string name="loantxt2">select name</string>
    <string name="loantxt3">loan amount</string>
    <string name="loantxt4">interest = 2%</string>
    <string name="loantxt5">Add</string>
    <string name="loantxt6">Go to Loan history</string>
    <string name="profsettxt1">Profile Setting</string>
    <string name="profsettxt2">Your Name :</string>
    <string name="profsettxt3">Mobile Number :</string>
    <string name="profsettxt4">Adharcard number :</string>
    <string name="profsettxt5">Set Password :</string>
    <string name="profsettxt6">Save</string>
    <string name="remetxt1">Remove Member</string>
    <string name="rmememtxt2">select name</string>
    <string name="rmememtxt3">Total amount saved</string>
    <string name="rmememtxt4">Loan amount dues</string>
    <string name="rmememtxt5">Amount debit/credit</string>
    <string name="rmememtxt6">REMOVE</string>
    <string name="tretxt1">Loan taken by You :</string>
    <string name="tretxt2">Loan</string>
    <string name="tretxt3">All Records</string>
    <string name="tretxt4">Profile setting</string>
    <string name="tretxt5">Bachat Gat Information</string>
    <string name="logpgtxt1">Fill in to login</string>
    <string name="logpgtxt2">Group Code</string>
    <string name="logpgtxt3">Search\nGroup</string>
    <string name="logpgtxt4">Your Name</string>
    <string name="logpgtxt5">Password</string>
    <string name="logpgtxt6">Admin</string>
    <string name="logpgtxt7">Member</string>
    <string name="logpgtxt8">Secretary</string>
    <string name="logpgtxt9">login</string>
    <string name="loantxt7">Date in format DD-MM-YYYY</string>
    <string name="grpregtxt9">Monthly Saving</string>
    <string name="grpregtxt10">Password</string>
    <string name="colltext7">Date in format DD-MM-YYYY</string>
    <string name="colltext8">Loan amount collected (if any)</string>
    <string name="crgrptext4">Select Lanuage </string>
    <string name="profsettxt10">Logout</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="grpregtxt40">Aadhaar Number</string>
    <string name="pdf">Create PDF</string>
    <string name="seeRecord"> All Collection Records</string>
    <string name="loanRec"> loan Records</string>
    <string name="loantxt8">Click on this to see amount to return with interest</string>
    <string name="yourCol"> Your Collection Records</string>
</resources>