<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:orientation="vertical"
    android:theme="@style/Theme.PblApp.Light"
    >

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/icon_yellow"
        />
    <TextView
        android:id="@+id/welcome2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crgrptxt1"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/bungee_regular"
        />

    <TextView
        android:id="@+id/signIn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/logpgtxt1"
        android:textSize="18sp"
        android:layout_marginStart="32dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:hint="@string/logpgtxt2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#F9E830"
            app:hintTextColor="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_code"
                android:inputType="text"
                android:nextFocusDown="@id/uname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="14dp"
            android:text="@string/logpgtxt3"
            android:textStyle="bold"
            android:backgroundTint="#F9E830"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:enabled="true"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#F9E830"
        app:hintTextColor="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_login"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:hint="@string/logpgtxt4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#F9E830"
        app:hintTextColor="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:hint="@string/logpgtxt5"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#F9E830"
        app:hintTextColor="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/radioGroupRoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logpgtxt6"
            android:padding="6dp"/>

        <RadioButton
            android:id="@+id/radioButtonMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logpgtxt7"
            android:padding="6dp"/>

        <RadioButton
            android:id="@+id/radioButtonTreasurer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logpgtxt8"
            android:padding="6dp"/>

    </RadioGroup>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/logpgtxt9"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        />


    </LinearLayout>
    </ScrollView>



</LinearLayout>