<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".AddUser">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:background="@drawable/background"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/adduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:layout_marginBottom="20dp"
        android:drawableTop="@drawable/woman"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/addusertext1"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/username"
        android:layout_below="@id/adduser"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:boxBackgroundColor="@color/white"
        android:enabled="true"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#000000"
        android:hint="@string/addusertext2"

        app:hintTextColor="@color/black"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/username"
            android:inputType="text"
            android:textCursorDrawable="@color/black"
            android:id="@+id/etusername"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/mob"
        android:layout_below="@id/username"
        android:layout_marginStart="30dp"
        app:boxBackgroundColor="@color/white"
        android:enabled="true"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#000000"
        android:hint="@string/addusertext3"
        android:layout_marginTop="10dp"
        app:hintTextColor="@color/black"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/mob"
            android:inputType="phone"
            android:maxLength="10"
            android:textCursorDrawable="@color/black"
            android:id="@+id/etmob"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/adhar"
        android:layout_below="@id/mob"
        android:layout_marginStart="30dp"
        app:boxBackgroundColor="@color/white"
        android:enabled="true"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#000000"
        android:hint="@string/addusertext4"
        android:layout_marginTop="10dp"
        app:hintTextColor="@color/black"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/adhar"
            android:inputType="number"
            android:maxLength="12"
            android:textCursorDrawable="@color/black"
            android:id="@+id/etadhar"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/memberpass"
        android:layout_below="@id/adhar"
        android:layout_marginStart="30dp"
        app:boxBackgroundColor="@color/white"
        android:enabled="true"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#000000"
        android:hint="@string/addusertext5"
        android:layout_marginTop="10dp"
        app:hintTextColor="@color/black"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/passyel"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/black"
            android:id="@+id/etmempass"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/secretary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/memberpass"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logpgtxt8"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="3dp">

        </TextView>

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/yes"
            app:boxBackgroundColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/No" />
    </RadioGroup>

    <Button
        android:id="@+id/addbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secretary"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/loantxt5"
        android:textColor="@color/black" />
</RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>