<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group_registration"
    android:theme="@style/Theme.PblApp.Light"
    android:orientation="vertical"
    android:backgroundTint="#fff"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/icon_yellow"
        />
    <TextView
        android:id="@+id/welcome2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crgrptxt1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/bungee_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signIn_tv"
        android:textSize="12sp"
        android:layout_marginLeft="35dp"
        android:text="@string/grpregtxt1"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt2"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_name"
                    android:nextFocusDown="@id/admin_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt3"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/admin_name"
                    android:nextFocusDown="@id/mobile_no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt4"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/mobile_no"
                    android:maxLength="10"
                    android:nextFocusDown="@id/adhaar_no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt40"
                android:nextFocusDown="@id/start_year"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/adhaar_no"
                    android:maxLength="12"
                    android:nextFocusDown="@id/start_year"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt5"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/start_year"
                    android:maxLength="4"
                    android:nextFocusDown="@id/start_month"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt6"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/start_month"
                    android:nextFocusDown="@id/monthly_saving"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:hint="@string/grpregtxt9"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/monthly_saving"
                    android:nextFocusDown="@id/admin_pass"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:hint="@string/grpregtxt10"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#F9E830"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/admin_pass"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:id="@+id/create_btn"
                android:backgroundTint="@color/black"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/grpregtxt8"
                android:textColor="@color/white"
                ></Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>